--- a/sch-dis-b.html
+++ b/sch-dis-b.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>sch-lec – Stats 4 CS</title>
+<title>sch-dis-b – Stats 4 CS</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -164,25 +164,8 @@ ul.task-list li input[type="checkbox"] {
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">On this page</h2>
-   
-  <ul>
-  <li><a href="#week-0" id="toc-week-0" class="nav-link active" data-scroll-target="#week-0">Week 0</a></li>
-  <li><a href="#week-1" id="toc-week-1" class="nav-link" data-scroll-target="#week-1">Week 1</a></li>
-  <li><a href="#week-2" id="toc-week-2" class="nav-link" data-scroll-target="#week-2">Week 2</a></li>
-  <li><a href="#week-3" id="toc-week-3" class="nav-link" data-scroll-target="#week-3">Week 3</a></li>
-  <li><a href="#week-4" id="toc-week-4" class="nav-link" data-scroll-target="#week-4">Week 4</a></li>
-  <li><a href="#week-5" id="toc-week-5" class="nav-link" data-scroll-target="#week-5">Week 5</a></li>
-  <li><a href="#week-6" id="toc-week-6" class="nav-link" data-scroll-target="#week-6">Week 6</a></li>
-  <li><a href="#week-7" id="toc-week-7" class="nav-link" data-scroll-target="#week-7">Week 7</a></li>
-  <li><a href="#week-8" id="toc-week-8" class="nav-link" data-scroll-target="#week-8">Week 8</a></li>
-  <li><a href="#week-9" id="toc-week-9" class="nav-link" data-scroll-target="#week-9">Week 9</a></li>
-  <li><a href="#week-10" id="toc-week-10" class="nav-link" data-scroll-target="#week-10">Week 10</a></li>
-  <li><a href="#final-week" id="toc-final-week" class="nav-link" data-scroll-target="#final-week">Final Week</a></li>
-  </ul>
-</nav>
+    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
+        
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content"><header id="title-block-header" class="quarto-title-block"></header>
@@ -190,15 +173,13 @@ ul.task-list li input[type="checkbox"] {
 
 
 
-<section id="week-0" class="level2">
-<h2 class="anchored" data-anchor-id="week-0">Week 0</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Sep 25 - Sep 28</p>
-<p><i class="fa-solid fa-comment" aria-label="comment"></i> Getting Ready for STATS 67</p>
 <table class="table-striped text-left table-bordered" align="center">
 <thead>
 <tr><th style="width:  3%">
+Date
 </th>
 <th style="width:  30%">
+Description
 </th>
 <th style="width:  40%">
 Notes
@@ -206,246 +187,22 @@ Notes
 <th style="width:  8%">
 Links
 </th>
-<th style="width:  15%">
-Due
-</th>
 </tr></thead>
 <tbody><tr>
 <td>
-<input type="checkbox">
+<input type="checkbox">Oct 2
 </td>
 <td>
-Getting to Know the Course Website &nbsp; &nbsp;
-</td>
-<td>
-Take time go over the contents of this website, especially read the policies section. Do not forget to bookmark <a href="https://stats4cs.com/">stats4cs.com</a>.
+Introduction to Data and Summarizing Data&nbsp; &nbsp;
 </td>
 <td>
 </td>
 <td>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Introduce Yourself to the Teaching Team
-</td>
-<td>
-The responses to this “quiz” will not be available to your classmates. The quiz is not timed.
-</td>
-<td>
-<a href="https://www.gradescope.com/courses/1142665/assignments/6838116" target="_blank"> <i class="fas fa-edit" aria-hidden="true" title="External Link to Gradescope" target="_blank"></i></a>
-</td>
-<td>
-Sep 29, 11:00 am
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Syllabus Quiz &nbsp; &nbsp;
-</td>
-<td>
-</td>
-<td>
-<a href="https://www.gradescope.com/courses/1142665/assignments/6838117" target="_blank"> <i class="fas fa-edit" aria-hidden="true" title="External Link to Gradescope" target="_blank"></i></a>
-</td>
-<td>
-Sep 29, 11:00 am
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Get Your Tech Ready
-</td>
-<td>
-The responses to this “quiz” will help us make sure that you are ready for the first class in terms of your tech needs. The quiz is not timed.
-</td>
-<td>
-<a href="https://www.gradescope.com/courses/1142665/assignments/6838118" target="_blank"> <i class="fas fa-edit" aria-hidden="true" title="External Link to Gradescope" target="_blank"></i></a>
-</td>
-<td>
-Sep 29, 11:00 am
 </td>
 </tr>
 </tbody></table>
-</section>
-<section id="week-1" class="level2">
-<h2 class="anchored" data-anchor-id="week-1">Week 1</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Sep 29 - Oct 5</p>
-<table class="table-striped text-left table-bordered" align="center">
-<thead>
-<tr><th style="width:  3%">
-</th>
-<th style="width:  30%">
-</th>
-<th style="width:  40%">
-Notes
-</th>
-<th style="width:  8%">
-Links
-</th>
-<th style="width:  15%">
-Due
-</th>
-</tr></thead>
-<tbody><tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Introduction to STATS 67 and Data &nbsp; &nbsp;
-</td>
-<td>
-Welcome!!!
-</td>
-<td>
-<a href="https://mdogucu.github.io/stats67-fa25-slides/week01/1a-intro-data.html" target="_blank"> <i class="fas fa-laptop" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1a-intro-data.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a>
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Reading
-</td>
-<td>
-Section 1.2
-</td>
-<td>
-<a href="https://www.openintro.org/go/?id=os4_for_screen_readers&amp;referrer=/book/os/index.php" target="_blank"> <i class="fas fa-book" aria-hidden="true" title="External Link to the Book" target="_blank"></i></a>
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Summarizing Data &nbsp; &nbsp;
-</td>
-<td>
-Descriptive Statistics and Data Visualizations (VIDEO RECORDED CLASS)
-</td>
-<td>
-<a href="https://uci.yuja.com/V/Video?v=12098192&amp;node=52518713&amp;a=72472280" target="_blank"> <i class="fas fa-video" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-slides/week01/1b-summarize-data.html" target="_blank"> <i class="fas fa-laptop" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1b-summarize-data.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a>
-</td>
-<td>
-</td>
-</tr>
-<tr>
-</tr><tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Discussion: Summarizing Data &nbsp; &nbsp;
-</td>
-<td>
-</td>
-<td>
-<a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1d-summarize-data.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a>
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Reading
-</td>
-<td>
-Chapter 2
-</td>
-<td>
-<a href="https://www.openintro.org/go/?id=os4_for_screen_readers&amp;referrer=/book/os/index.php" target="_blank"> <i class="fas fa-book" aria-hidden="true" title="External Link to the Book" target="_blank"></i></a>
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Homework 1: First Steps with Data &nbsp; &nbsp;
-</td>
-<td>
-</td>
-<td>
-<a href="https://www.gradescope.com/courses/935954/assignments/5511971" target="_blank"> <i class="fas fa-edit" aria-hidden="true" title="External Link to Gradescope" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1h-summarize-data.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a>
-</td>
-<td>
-Jan 14, 9:30 am
-</td>
-</tr>
-</tbody></table>
-</section>
-<section id="week-2" class="level2">
-<h2 class="anchored" data-anchor-id="week-2">Week 2</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Oct 6 - 12</p>
-<p>TBD</p>
-</section>
-<section id="week-3" class="level2">
-<h2 class="anchored" data-anchor-id="week-3">Week 3</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Oct 13 - 19</p>
-<p>TBD</p>
-</section>
-<section id="week-4" class="level2">
-<h2 class="anchored" data-anchor-id="week-4">Week 4</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Oct 20 - 26</p>
-<p>TBD</p>
-</section>
-<section id="week-5" class="level2">
-<h2 class="anchored" data-anchor-id="week-5">Week 5</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Oct 27 - Nov 2</p>
-<p>TBD</p>
-</section>
-<section id="week-6" class="level2">
-<h2 class="anchored" data-anchor-id="week-6">Week 6</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Nov 3 - Nov 9</p>
-<p>TBD</p>
-</section>
-<section id="week-7" class="level2">
-<h2 class="anchored" data-anchor-id="week-7">Week 7</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Nov 10 - 16</p>
-<p>TBD</p>
-</section>
-<section id="week-8" class="level2">
-<h2 class="anchored" data-anchor-id="week-8">Week 8</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Nov 17 - Nov 23</p>
-<p>TBD</p>
-</section>
-<section id="week-9" class="level2">
-<h2 class="anchored" data-anchor-id="week-9">Week 9</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Nov 24 - Nov 30</p>
-<p>TBD</p>
-</section>
-<section id="week-10" class="level2">
-<h2 class="anchored" data-anchor-id="week-10">Week 10</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Dec 1 - Dec 7</p>
-<p>TBD</p>
-</section>
-<section id="final-week" class="level2">
-<h2 class="anchored" data-anchor-id="final-week">Final Week</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Dec 8 - Dec 12</p>
-<p>TBD</p>
 
 
-</section>
 
 </main> <!-- /main -->
 <script defer="" data-domain="stats4cs.com" src="https://plausible.io/js/script.js"></script>
