--- a/tools.html
+++ b/tools.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>sch-lec – Stats 4 CS</title>
+<title>tools – Stats 4 CS</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -124,7 +124,7 @@ ul.task-list li input[type="checkbox"] {
     </ul>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="./tools.html"> 
+    <a class="nav-link active" href="./tools.html" aria-current="page"> 
 <span class="menu-text"><i class="fa-solid fa-toolbox" aria-label="toolbox"></i> Tools</span></a>
   </li>  
   <li class="nav-item">
@@ -169,18 +169,9 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#week-0" id="toc-week-0" class="nav-link active" data-scroll-target="#week-0">Week 0</a></li>
-  <li><a href="#week-1" id="toc-week-1" class="nav-link" data-scroll-target="#week-1">Week 1</a></li>
-  <li><a href="#week-2" id="toc-week-2" class="nav-link" data-scroll-target="#week-2">Week 2</a></li>
-  <li><a href="#week-3" id="toc-week-3" class="nav-link" data-scroll-target="#week-3">Week 3</a></li>
-  <li><a href="#week-4" id="toc-week-4" class="nav-link" data-scroll-target="#week-4">Week 4</a></li>
-  <li><a href="#week-5" id="toc-week-5" class="nav-link" data-scroll-target="#week-5">Week 5</a></li>
-  <li><a href="#week-6" id="toc-week-6" class="nav-link" data-scroll-target="#week-6">Week 6</a></li>
-  <li><a href="#week-7" id="toc-week-7" class="nav-link" data-scroll-target="#week-7">Week 7</a></li>
-  <li><a href="#week-8" id="toc-week-8" class="nav-link" data-scroll-target="#week-8">Week 8</a></li>
-  <li><a href="#week-9" id="toc-week-9" class="nav-link" data-scroll-target="#week-9">Week 9</a></li>
-  <li><a href="#week-10" id="toc-week-10" class="nav-link" data-scroll-target="#week-10">Week 10</a></li>
-  <li><a href="#final-week" id="toc-final-week" class="nav-link" data-scroll-target="#final-week">Final Week</a></li>
+  <li><a href="#textbook" id="toc-textbook" class="nav-link active" data-scroll-target="#textbook">Textbook</a></li>
+  <li><a href="#programming-tools" id="toc-programming-tools" class="nav-link" data-scroll-target="#programming-tools">Programming Tools</a></li>
+  <li><a href="#other-software" id="toc-other-software" class="nav-link" data-scroll-target="#other-software">Other Software</a></li>
   </ul>
 </nav>
     </div>
@@ -190,259 +181,20 @@ ul.task-list li input[type="checkbox"] {
 
 
 
-<section id="week-0" class="level2">
-<h2 class="anchored" data-anchor-id="week-0">Week 0</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Sep 25 - Sep 28</p>
-<p><i class="fa-solid fa-comment" aria-label="comment"></i> Getting Ready for STATS 67</p>
-<table class="table-striped text-left table-bordered" align="center">
-<thead>
-<tr><th style="width:  3%">
-</th>
-<th style="width:  30%">
-</th>
-<th style="width:  40%">
-Notes
-</th>
-<th style="width:  8%">
-Links
-</th>
-<th style="width:  15%">
-Due
-</th>
-</tr></thead>
-<tbody><tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Getting to Know the Course Website &nbsp; &nbsp;
-</td>
-<td>
-Take time go over the contents of this website, especially read the policies section. Do not forget to bookmark <a href="https://stats4cs.com/">stats4cs.com</a>.
-</td>
-<td>
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Introduce Yourself to the Teaching Team
-</td>
-<td>
-The responses to this “quiz” will not be available to your classmates. The quiz is not timed.
-</td>
-<td>
-<a href="https://www.gradescope.com/courses/1142665/assignments/6838116" target="_blank"> <i class="fas fa-edit" aria-hidden="true" title="External Link to Gradescope" target="_blank"></i></a>
-</td>
-<td>
-Sep 29, 11:00 am
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Syllabus Quiz &nbsp; &nbsp;
-</td>
-<td>
-</td>
-<td>
-<a href="https://www.gradescope.com/courses/1142665/assignments/6838117" target="_blank"> <i class="fas fa-edit" aria-hidden="true" title="External Link to Gradescope" target="_blank"></i></a>
-</td>
-<td>
-Sep 29, 11:00 am
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Get Your Tech Ready
-</td>
-<td>
-The responses to this “quiz” will help us make sure that you are ready for the first class in terms of your tech needs. The quiz is not timed.
-</td>
-<td>
-<a href="https://www.gradescope.com/courses/1142665/assignments/6838118" target="_blank"> <i class="fas fa-edit" aria-hidden="true" title="External Link to Gradescope" target="_blank"></i></a>
-</td>
-<td>
-Sep 29, 11:00 am
-</td>
-</tr>
-</tbody></table>
+<section id="textbook" class="level2">
+<h2 class="anchored" data-anchor-id="textbook">Textbook</h2>
+<p><a href="https://leanpub.com/os">OpenIntro</a> We will use the fourth edition of the OpenIntro book by Diez, Çetinkaya-Rundel, Barr. The book is accessible for free. You can choose to pay $0 if you would like to.</p>
 </section>
-<section id="week-1" class="level2">
-<h2 class="anchored" data-anchor-id="week-1">Week 1</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Sep 29 - Oct 5</p>
-<table class="table-striped text-left table-bordered" align="center">
-<thead>
-<tr><th style="width:  3%">
-</th>
-<th style="width:  30%">
-</th>
-<th style="width:  40%">
-Notes
-</th>
-<th style="width:  8%">
-Links
-</th>
-<th style="width:  15%">
-Due
-</th>
-</tr></thead>
-<tbody><tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Introduction to STATS 67 and Data &nbsp; &nbsp;
-</td>
-<td>
-Welcome!!!
-</td>
-<td>
-<a href="https://mdogucu.github.io/stats67-fa25-slides/week01/1a-intro-data.html" target="_blank"> <i class="fas fa-laptop" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1a-intro-data.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a>
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Reading
-</td>
-<td>
-Section 1.2
-</td>
-<td>
-<a href="https://www.openintro.org/go/?id=os4_for_screen_readers&amp;referrer=/book/os/index.php" target="_blank"> <i class="fas fa-book" aria-hidden="true" title="External Link to the Book" target="_blank"></i></a>
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Summarizing Data &nbsp; &nbsp;
-</td>
-<td>
-Descriptive Statistics and Data Visualizations (VIDEO RECORDED CLASS)
-</td>
-<td>
-<a href="https://uci.yuja.com/V/Video?v=12098192&amp;node=52518713&amp;a=72472280" target="_blank"> <i class="fas fa-video" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-slides/week01/1b-summarize-data.html" target="_blank"> <i class="fas fa-laptop" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1b-summarize-data.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a>
-</td>
-<td>
-</td>
-</tr>
-<tr>
-</tr><tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Discussion: Summarizing Data &nbsp; &nbsp;
-</td>
-<td>
-</td>
-<td>
-<a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1d-summarize-data.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a>
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Reading
-</td>
-<td>
-Chapter 2
-</td>
-<td>
-<a href="https://www.openintro.org/go/?id=os4_for_screen_readers&amp;referrer=/book/os/index.php" target="_blank"> <i class="fas fa-book" aria-hidden="true" title="External Link to the Book" target="_blank"></i></a>
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">
-</td>
-<td>
-Homework 1: First Steps with Data &nbsp; &nbsp;
-</td>
-<td>
-</td>
-<td>
-<a href="https://www.gradescope.com/courses/935954/assignments/5511971" target="_blank"> <i class="fas fa-edit" aria-hidden="true" title="External Link to Gradescope" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1h-summarize-data.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="External Link to Slides" target="_blank"></i></a>
-</td>
-<td>
-Jan 14, 9:30 am
-</td>
-</tr>
-</tbody></table>
+<section id="programming-tools" class="level2">
+<h2 class="anchored" data-anchor-id="programming-tools">Programming Tools</h2>
+<p><strong>R and RStudio</strong> We will use the R language which is a popular programming language used by statisticians and data scientists. We will use RStudio interface while using the R language.</p>
 </section>
-<section id="week-2" class="level2">
-<h2 class="anchored" data-anchor-id="week-2">Week 2</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Oct 6 - 12</p>
-<p>TBD</p>
-</section>
-<section id="week-3" class="level2">
-<h2 class="anchored" data-anchor-id="week-3">Week 3</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Oct 13 - 19</p>
-<p>TBD</p>
-</section>
-<section id="week-4" class="level2">
-<h2 class="anchored" data-anchor-id="week-4">Week 4</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Oct 20 - 26</p>
-<p>TBD</p>
-</section>
-<section id="week-5" class="level2">
-<h2 class="anchored" data-anchor-id="week-5">Week 5</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Oct 27 - Nov 2</p>
-<p>TBD</p>
-</section>
-<section id="week-6" class="level2">
-<h2 class="anchored" data-anchor-id="week-6">Week 6</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Nov 3 - Nov 9</p>
-<p>TBD</p>
-</section>
-<section id="week-7" class="level2">
-<h2 class="anchored" data-anchor-id="week-7">Week 7</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Nov 10 - 16</p>
-<p>TBD</p>
-</section>
-<section id="week-8" class="level2">
-<h2 class="anchored" data-anchor-id="week-8">Week 8</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Nov 17 - Nov 23</p>
-<p>TBD</p>
-</section>
-<section id="week-9" class="level2">
-<h2 class="anchored" data-anchor-id="week-9">Week 9</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Nov 24 - Nov 30</p>
-<p>TBD</p>
-</section>
-<section id="week-10" class="level2">
-<h2 class="anchored" data-anchor-id="week-10">Week 10</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Dec 1 - Dec 7</p>
-<p>TBD</p>
-</section>
-<section id="final-week" class="level2">
-<h2 class="anchored" data-anchor-id="final-week">Final Week</h2>
-<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Dec 8 - Dec 12</p>
-<p>TBD</p>
+<section id="other-software" class="level2">
+<h2 class="anchored" data-anchor-id="other-software">Other Software</h2>
+<p>We will use <a href="https://edstem.org/us/courses/87623">an online forum</a> where you can ask and answer questions. Please read <a href="policies.html#online-discussion">guidelines</a> for the online forum. I will also make announcement using this forum. It is your responsibility to check the forum on a regular basis thus make sure to have appropriate notifications turned on.</p>
+<p>We will use <a href="https://www.gradescope.com/courses/1142665">Gradescope</a> for most of the assignments. You will get instructions on how to use Gradescope.</p>
+<p>We will use <a href="https://canvas.eee.uci.edu/courses/76405/gradebook">Canvas</a> for keeping track of grades.</p>
+<p>If you are not on campus, you will need to connect through <a href="https://www.oit.uci.edu/help/vpn/">VPN</a> to access resources that are only accessible on campus. Follow the instructions on the link.</p>
 
 
 </section>
