updated week 9 dis a

--- a/specific-content/schedule/04-week11.html
+++ b/specific-content/schedule/04-week11.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>sch-dis-a – Stats 4 CS</title>
+<title>week11 – Stats 4 CS</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,25 +23,25 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="site_libs/quarto-nav/quarto-nav.js"></script>
-<script src="site_libs/clipboard/clipboard.min.js"></script>
-<script src="site_libs/quarto-search/autocomplete.umd.js"></script>
-<script src="site_libs/quarto-search/fuse.min.js"></script>
-<script src="site_libs/quarto-search/quarto-search.js"></script>
-<meta name="quarto:offset" content="./">
-<script src="site_libs/quarto-html/quarto.js" type="module"></script>
-<script src="site_libs/quarto-html/tabsets/tabsets.js" type="module"></script>
-<script src="site_libs/quarto-html/axe/axe-check.js" type="module"></script>
-<script src="site_libs/quarto-html/popper.min.js"></script>
-<script src="site_libs/quarto-html/tippy.umd.min.js"></script>
-<script src="site_libs/quarto-html/anchor.min.js"></script>
-<link href="site_libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="site_libs/quarto-html/quarto-syntax-highlighting-7b89279ff1a6dce999919e0e67d4d9ec.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="site_libs/bootstrap/bootstrap.min.js"></script>
-<link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-c9957117a9c7bcc32731f3b50bd674d1.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
-<link href="site_libs/quarto-contrib/fontawesome6-0.1.0/all.css" rel="stylesheet">
-<link href="site_libs/quarto-contrib/fontawesome6-0.1.0/latex-fontsize.css" rel="stylesheet">
+<script src="../../site_libs/quarto-nav/quarto-nav.js"></script>
+<script src="../../site_libs/clipboard/clipboard.min.js"></script>
+<script src="../../site_libs/quarto-search/autocomplete.umd.js"></script>
+<script src="../../site_libs/quarto-search/fuse.min.js"></script>
+<script src="../../site_libs/quarto-search/quarto-search.js"></script>
+<meta name="quarto:offset" content="../../">
+<script src="../../site_libs/quarto-html/quarto.js" type="module"></script>
+<script src="../../site_libs/quarto-html/tabsets/tabsets.js" type="module"></script>
+<script src="../../site_libs/quarto-html/axe/axe-check.js" type="module"></script>
+<script src="../../site_libs/quarto-html/popper.min.js"></script>
+<script src="../../site_libs/quarto-html/tippy.umd.min.js"></script>
+<script src="../../site_libs/quarto-html/anchor.min.js"></script>
+<link href="../../site_libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="../../site_libs/quarto-html/quarto-syntax-highlighting-7b89279ff1a6dce999919e0e67d4d9ec.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="../../site_libs/bootstrap/bootstrap.min.js"></script>
+<link href="../../site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="../../site_libs/bootstrap/bootstrap-c9957117a9c7bcc32731f3b50bd674d1.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="../../site_libs/quarto-contrib/fontawesome6-0.1.0/all.css" rel="stylesheet">
+<link href="../../site_libs/quarto-contrib/fontawesome6-0.1.0/latex-fontsize.css" rel="stylesheet">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -71,7 +71,7 @@ ul.task-list li input[type="checkbox"] {
 }</script>
 
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../../style.css">
 </head>
 
 <body class="nav-fixed quarto-light">
@@ -81,11 +81,11 @@ ul.task-list li input[type="checkbox"] {
     <nav class="navbar navbar-expand-lg " data-bs-theme="dark">
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container mx-auto">
-    <a href="./index.html" class="navbar-brand navbar-brand-logo">
-    <img src="./img/logo.png" alt="" class="navbar-logo light-content">
-    <img src="./img/logo.png" alt="" class="navbar-logo dark-content">
+    <a href="../../index.html" class="navbar-brand navbar-brand-logo">
+    <img src="../../img/logo.png" alt="" class="navbar-logo light-content">
+    <img src="../../img/logo.png" alt="" class="navbar-logo dark-content">
     </a>
-    <a class="navbar-brand" href="./index.html">
+    <a class="navbar-brand" href="../../index.html">
     <span class="navbar-title">Stats 4 CS</span>
     </a>
   </div>
@@ -96,15 +96,15 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="./index.html"> 
+    <a class="nav-link" href="../../index.html"> 
 <span class="menu-text"><i class="fa-solid fa-home" aria-label="home"></i> Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./people.html"> 
+    <a class="nav-link" href="../../people.html"> 
 <span class="menu-text"><i class="fa-solid fa-chalkboard-teacher" aria-label="chalkboard-teacher"></i> People</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./policies.html"> 
+    <a class="nav-link" href="../../policies.html"> 
 <span class="menu-text"><i class="fa-solid fa-gavel" aria-label="gavel"></i> Policies</span></a>
   </li>  
   <li class="nav-item dropdown ">
@@ -113,25 +113,25 @@ ul.task-list li input[type="checkbox"] {
     </a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-fa-calendar--schedule">    
         <li>
-    <a class="dropdown-item" href="./sch-lec.html">
+    <a class="dropdown-item" href="../../sch-lec.html">
  <span class="dropdown-text">Lecture</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./sch-dis-a.html">
+    <a class="dropdown-item" href="../../sch-dis-a.html">
  <span class="dropdown-text">Discussion A</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./sch-dis-b.html">
+    <a class="dropdown-item" href="../../sch-dis-b.html">
  <span class="dropdown-text">Discussion B</span></a>
   </li>  
     </ul>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="./tools.html"> 
+    <a class="nav-link" href="../../tools.html"> 
 <span class="menu-text"><i class="fa-solid fa-toolbox" aria-label="toolbox"></i> Tools</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./resources.html"> 
+    <a class="nav-link" href="../../resources.html"> 
 <span class="menu-text"><i class="fa-solid fa-medal" aria-label="medal"></i> Resources</span></a>
   </li>  
 </ul>
@@ -181,139 +181,140 @@ ul.task-list li input[type="checkbox"] {
 
 
 
+<p><i class="fa-solid fa-calendar" aria-label="calendar"></i> Dec 8 - Dec 12</p>
 <table class="table-striped text-left table-bordered" align="center">
 <thead>
-<tr><th style="width:  11%">
-Date
+<tr><th style="width:  3%">
 </th>
 <th style="width:  30%">
-Description
 </th>
-<th style="width:  25%">
+<th style="width:  40%">
 Notes
 </th>
-<th style="width:  15%">
+<th style="width:  8%">
 Links
+</th>
+<th style="width:  15%">
+Due
 </th>
 </tr></thead>
 <tbody><tr>
 <td>
-<input type="checkbox">Sep 30
+<input type="checkbox">
 </td>
 <td>
-Introduction to Data &nbsp; &nbsp;
+Review for Midterm&nbsp; &nbsp;
 </td>
 <td>
 </td>
 <td>
-<a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1disa-intro-data.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="Download Quarto File" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1disa-intro-data-TA-notes.qmd" download="" title="TA notes"> TA notes</a>
+</td>
+<td>
 </td>
 </tr>
 <tr>
 <td>
-<input type="checkbox">Oct 7
+<input type="checkbox">
 </td>
 <td>
-Summarizing Data and Study Design &nbsp; &nbsp;
-</td>
-<td>
-</td>
-<td>
-<a href="https://mdogucu.github.io/stats67-fa25-starter-codes/2disa-study-prob.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="Download Quarto File" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/2disa-study-prob-TA-notes.qmd" download="" title="TA notes"> TA notes</a>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">Oct 14
-</td>
-<td>
-Probability and Discrete Random Variables &nbsp; &nbsp;
+Final Objectives &nbsp; &nbsp;
 </td>
 <td>
 </td>
 <td>
-<a href="https://mdogucu.github.io/stats67-fa25-starter-codes/3disa-prob-discrete-rv.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="Download Quarto File" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/3disa-prob-discrete-rv-TA-notes.qmd" download="" title="TA notes"> TA notes</a>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">Oct 21
-</td>
-<td>
-Discrete Distributions and Continuous Random Variables &nbsp; &nbsp;
-</td>
-<td>
-</td>
-<td>
-<a href="https://mdogucu.github.io/stats67-fa25-starter-codes/4disa-discrete-distr-continuous-rv.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="Download Quarto File" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/4disa-discrete-distr-continuous-rv-TA-notes.qmd" download="" title="TA notes"> TA notes</a>
-</td>
-</tr>
-<tr>
-<td>
-<input type="checkbox">Oct 28
-</td>
-<td>
-Continuous Distributions and Midterm Review &nbsp; &nbsp;
-</td>
-<td>
-<a href="https://docs.google.com/presentation/d/1XhZwyuECilOtk5HQqyLgw2LasBefCBfPLjrIheMyEK0/edit?usp=sharing" target="_blank"> <i class="fas fa-laptop" aria-hidden="true" title="External Link to Slides" target="_blank"></i>
+<a href="https://mdogucu.github.io/stats67-fa25-slides/week11/objectives.pdf" target="_blank"> <i class="fas fa-book" aria-hidden="true" title="External Link to Slides" target="_blank"></i>
 </a></td>
 <td>
-<a href="https://mdogucu.github.io/stats67-fa25-starter-codes/5disa-continuous-distr.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="Download Quarto File" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/5disa-continuous-distr-TA-notes.qmd" download="" title="TA notes"> TA notes</a>
 </td>
 </tr>
 <tr>
 <td>
-<input type="checkbox">Nov 4
+<input type="checkbox">
 </td>
 <td>
-Introduction to Statistical Inference and Midterm Solutions &nbsp; &nbsp;
+Final Cheatsheet &nbsp; &nbsp;
 </td>
 <td>
-<a href="https://canvas.eee.uci.edu/courses/76405/files?preview=33105761" target="_blank" title="External Link to Canvas"> Midterm Solutions </a>
 </td>
 <td>
-<a href="https://mdogucu.github.io/stats67-fa25-starter-codes/6disa-stat-inf-intro.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="Download Quarto File" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/6disa-stat-inf-TA-notes.qmd" download="" title="TA notes"> TA notes</a>
+<a href="https://mdogucu.github.io/stats67-fa25-slides/week11/cheatsheet.pdf" target="_blank"> <i class="fas fa-book" aria-hidden="true" title="External Link to Slides" target="_blank"></i>
+</a></td>
+<td>
 </td>
 </tr>
 <tr>
 <td>
-<input type="checkbox"> Nov 11
+<input type="checkbox">
 </td>
 <td>
-Inference for a Single Proportion and Difference Between 2 Proportions &nbsp; &nbsp;
+Final Policies &nbsp; &nbsp;
 </td>
 <td>
-<mark> NO DISCUSSION TODAY: Veteran’s day holiday</mark> <br> Instead here is a <a href="https://urldefense.com/v3/__https://uci.zoom.us/rec/share/IaZOLKxdct5EB-q12UxvkGBjMTt55SC2CuR3S_s36yeFB7kTDGvPzdj0ArnA6Scs.3ZfRJqM6RjUVkglf__;!!CzAuKJ42GuquVTTmVmPViYEvSg!JJb9QWGhSdgSqqKH0ZNKih99EkoaBEk_nC2nYS0-TIJvR-d9uyYbX-sHR8Bkd-YUYvML6lw0VXkfv3g$" target="_blank" title="Link to Zoom Recording"> recording </a> of Lynn going over Single Proportions. Peter’s recording for 2 Proportions is <a href="https://uci.zoom.us/rec/share/NIAV7RBcFapwSaJqQnumcUUY_U4kEfd_Uhc1M3anWoT0flbF57YYjZ31-RWi8Eeu.4WjGWqvyOCZF9LNq?startTime=1763059878000" target="_blank" title="Link to Zoom Recording"> here</a>.
 </td>
 <td>
-<a href="https://mdogucu.github.io/stats67-fa25-starter-codes/7disa-single-diff-props.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="Download Quarto File" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/7disa-single-diff-props-TA-notes.qmd" download="" title="TA notes"> TA notes</a>
+<a href="https://mdogucu.github.io/stats67-fa25-slides/week11/cover.pdf" target="_blank"> <i class="fas fa-book" aria-hidden="true" title="External Link to Slides" target="_blank"></i>
+</a></td>
+<td>
 </td>
 </tr>
 <tr>
 <td>
-<input type="checkbox">Nov 18
+<input type="checkbox">
 </td>
 <td>
-Inference for Difference Between 2 Proportions and for a Single Mean &nbsp; &nbsp;
+Sample Final Exam &nbsp; &nbsp;
 </td>
 <td>
 </td>
 <td>
-<a href="https://mdogucu.github.io/stats67-fa25-starter-codes/8disa-diff-props-single-mean.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="Download Quarto File" target="_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/8disa-diff-props-single-mean-TA-notes.qmd" download="" title="TA notes"> TA notes</a>
+<a href="https://canvas.eee.uci.edu/courses/76405/files?preview=33326306" target="_blank"> <i class="fas fa-book" aria-hidden="true" title="External Link to Slides" target="_blank"></i>
+</a></td>
+<td>
 </td>
 </tr>
 <tr>
 <td>
-<input type="checkbox">Nov 25
+<input type="checkbox">
 </td>
 <td>
-Inference for Difference Between 2 Means and Simple Linear Regression &nbsp; &nbsp;
+Sample Final Exam Solutions &nbsp; &nbsp;
 </td>
 <td>
 </td>
 <td>
-<a href="https://mdogucu.github.io/stats67-fa25-starter-codes/9disa-diff-mean-simple-linear-regression.qmd" download=""> <i class="fa-brands fa-r-project" aria-hidden="true" title="Download Quarto File" target="_blank"></i></a>
+<a href="https://canvas.eee.uci.edu/courses/76405/files?preview=33326305" target="_blank"> <i class="fas fa-book" aria-hidden="true" title="External Link to Slides" target="_blank"></i>
+</a></td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+<input type="checkbox">
+</td>
+<td>
+Final Exam for Lecture B &nbsp; &nbsp;
+</td>
+<td>
+In ICS 174 Mon, Dec 8 at 1:30-3:30pm
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+<input type="checkbox">
+</td>
+<td>
+Final Exam for Lecture A &nbsp; &nbsp;
+</td>
+<td>
+In ICS 174 Fri, Dec 12 at 8:00-10:00am
+</td>
+<td>
+</td>
+<td>
 </td>
 </tr>
 </tbody></table>
